# gain

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/token_sale/: Cargo.toml
programs/token_sale/src/: error.rs  lib.rs
programs/token_sale/src/instructions/: admin.rs  airdrop.rs  mod.rs  sale.rs
programs/token_sale/src/state/: config.rs  events.rs  mod.rs
test/: package.json
tests/: token_sale.ts
