[package]
name = "token_sale"
version = "0.1.0"
description = "Created by Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_sale"

[dependencies]
anchor-lang = { version = "0.31.1", features = [ "init-if-needed" ] }
anchor-spl = "0.31.1"
sha2 = "0.10"
pyth_sdk_solana = { git = "https://github.com/pyth-network/pyth-sdk-rs", package = "pyth-sdk-solana" }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
